# Ebi_objects

./: Cargo.toml  LICENSE  README.md  test.sh
src/: attribute_key.rs  data_type.rs  iterators.rs  json.rs  lib.rs  line_reader.rs  marking.rs  parallel_trace_iterator.rs  strongly_connected_components.rs  tests.rs  trace_iterator.rs
src/activity_key/: activity.rs  activity_key.rs  activity_key_translator.rs  has_activity_key.rs  translate_activity_key.rs
src/attribute_key/: attribute.rs  attribute_key.rs  data_type.rs  has_attribute_key.rs
src/bpmn/: collapsed_pool.rs  element.rs  exporter.rs  importer.rs  message_flow.rs  objects.rs  objects_elementable.rs  objects_objectable.rs  objects_searchable.rs  objects_transitionable.rs  objects_writable.rs  parser.rs  parser_state.rs  parser_traits.rs  process.rs  semantics.rs  sequence_flow.rs  structure_checker.rs  tag_collaboration.rs  tag_definitions.rs  tag_end_event.rs  tag_exclusive_gateway.rs  tag_inclusive_gateway.rs  tag_intermediate_catch_event.rs  tag_intermediate_throw_event.rs  tag_message_event_definition.rs  tag_message_flow.rs  tag_parallel_gateway.rs  tag_process.rs  tag_sequence_flow.rs  tag_start_event.rs  tag_task.rs  tags.rs
src/bpmn/elements/: collapsed_pool.rs  collapsed_sub_process.rs  end_event.rs  event_based_gateway.rs  exclusive_gateway.rs  expanded_sub_process.rs  inclusive_gateway.rs  intermediate_catch_event.rs  intermediate_throw_event.rs  message_end_event.rs  message_intermediate_catch_event.rs  message_intermediate_throw_event.rs  message_start_event.rs  parallel_gateway.rs  participant.rs  process.rs  start_event.rs  task.rs
src/bpmn/parser/: parser.rs  parser_state.rs  parser_traits.rs  tag_collaboration.rs  (+17 more)
src/constants/: ebi_object.rs  ebi_object_type.rs
src/conversions/: to_business_process_model_and_notation.rs  to_compressed_event_log.rs  to_compressed_event_log_event_attributes.rs  to_compressed_event_log_trace_attributes.rs  to_compressed_event_log_xes.rs  to_deterministic_finite_automaton.rs  to_directly_follows_model.rs  to_event_log.rs  to_event_log_csv.rs  to_event_log_event_attributes.rs  to_event_log_ocel.rs  to_event_log_python.rs  to_event_log_trace_attributes.rs  to_event_log_xes.rs  to_executions.rs  to_finite_language.rs  to_finite_stochastic_language.rs  to_finite_stochastic_partially_ordered_language.rs  to_labelled_petri_net.rs  to_lola_net.rs  to_partially_ordered_workflow_language.rs  to_petri_net_markup_language.rs  to_process_tree.rs  to_stochastic_deterministic_finite_automaton.rs  to_stochastic_directly_follows_model.rs  to_stochastic_labelled_petri_net.rs  to_stochastic_nondeterministic_finite_automaton.rs  to_stochastic_process_tree.rs
src/ebi_objects/: business_process_model_and_notation.rs  business_process_model_and_notation_importer.rs  compressed_event_log.rs  compressed_event_log_event_attributes.rs  compressed_event_log_trace_attributes.rs  compressed_event_log_xes.rs  deterministic_finite_automaton.rs  directly_follows_graph.rs  directly_follows_model.rs  event_log.rs  event_log_csv.rs  event_log_event_attributes.rs  event_log_ocel.rs  event_log_python.rs  event_log_trace_attributes.rs  event_log_xes.rs  executions.rs  finite_language.rs  finite_stochastic_language.rs  finite_stochastic_partially_ordered_language.rs  labelled_petri_net.rs  language_of_alignments.rs  lola_net.rs  partially_ordered_workflow_language.rs  petri_net_markup_language.rs  portable_document_format.rs  portable_network_graphics.rs  process_tree.rs  process_tree_markup_language.rs  scalable_vector_graphics.rs  stochastic_business_process_model_and_notation.rs  stochastic_deterministic_finite_automaton.rs  stochastic_directly_follows_model.rs  stochastic_labelled_petri_net.rs  stochastic_language_of_alignments.rs  stochastic_nondeterministic_finite_automaton.rs  stochastic_process_tree.rs
src/iterators/: attribute_iterator.rs  event_attribute_iterator.rs  parallel_ref_probability_trace_iterator.rs  parallel_ref_trace_iterator.rs  parallel_trace_iterator.rs  ref_trace_iterator.rs  trace_attribute_iterator.rs  trace_iterator.rs
src/traits/: attribute_iterators.rs  attributes.rs  automaton_semantics.rs  event_attribute_iterators.rs  event_attributes.rs  exportable.rs  graphable.rs  importable.rs  index_trace.rs  index_trace_attributes.rs  infoable.rs  number_of_traces.rs  start_end_activities.rs  stochastic_automaton_semantics.rs  trace_attribute_iterators.rs  trace_attributes.rs  trace_iterators.rs
testfiles/: a-b.exs  a.powl  aa-ab-ba.ali  and_a_b.powl  and_a_b_invalid.powl  loop(a,b,c).sptree  loop(a,loop(b,c)).sptree  loop(loop(a,b),c).sptree  loop(or(a,loop(b,c),d).sptree  loop(xor(a,loop(b,c),d).sptree  loop_issue.sptree  model-lanes.bpmn  model-pool.bpmn  multiline.slang  multiline.spolang  or_a_b.powl  regress_-_english_f28e862436f04ed9b8c4185607655706.bpmn.sbpmn.spolang  sepsis.powl  seq(a,and(b,loop(c,d))).sptree  seq(a,xor(seq(f,and(c,b)),seq(f,loop(d,e))).sptree  skippable_repeatable.powl
(+19 files in other folders)
