[package]
name = "ebi_objects"
version = "0.3.37"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["stochastic-processes", "process-mining", "business-processes"]
categories = ["command-line-utilities"]
description = "Objects for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi_objects"
readme = "README.md"
exclude = ["/testfiles", "/manual", ".github/", ".*"]

[lib]
name = "ebi_objects"
crate-type = ["cdylib", "lib"]

[features]
default = []
eexactarithmetic = []
exactarithmetic = ["eexactarithmetic", "ebi_arithmetic/exactarithmetic"]
approximatearithmetic = [
    "eapproximatearithmetic",
    "ebi_arithmetic/approximatearithmetic",
]
eapproximatearithmetic = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebi_arithmetic = "0.3.2"
ebi_derive = "0.2.7"
anyhow = "1.0.100"
process_mining = "0.3.25"
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0.145"
uuid = "1.18.1"
layout-rs = "0.1.3"
flate2 = "1.1.5"
strum = "0.27.2"
strum_macros = "0.27.2"
malachite = "0.7.0"
itertools = "0.14.0"
chrono = "0.4.42"
fnv = "1.0.7"
svg2pdf = "0.13.0"
quick-xml = {version="0.38.3", features=["serialize"]}
rayon = "1.11.0"
intmap = "3.1.3"
csv = "1.4.0"

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1
