[package]
name = "ebi_objects"
version = "0.3.187"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["stochastic-processes", "process-mining", "business-processes"]
categories = ["command-line-utilities"]
description = "Objects for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi_objects"
readme = "README.md"
exclude = ["/testfiles", "/manual", ".github/", ".*"]

[lib]
name = "ebi_objects"
crate-type = ["cdylib", "lib"]

[features]
default = [ ]
eexactarithmetic = []
exactarithmetic = ["eexactarithmetic", "ebi_bpmn/exactarithmetic"]
approximatearithmetic = ["eapproximatearithmetic", "ebi_bpmn/approximatearithmetic"]
eapproximatearithmetic = []
testactivities = [ "ebi_activity_key/testactivities", "ebi_bpmn/testactivities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebi_activity_key = "0.0.3"
ebi_derive = "0.2.11"
ebi_bpmn = { git = "https://github.com/BPM-Research-Group/Ebi_BPMN.git", version="0.0.49" }
process_mining = "0.6.0"
anyhow = "1.0.104"
log = "0.4.33"
serde = "1.0.229"
serde_json = "1.0.150"
uuid = "1.24.0"
layout-rs = "0.1.3"
flate2 = "1.1.9"
strum = "0.28.0"
strum_macros = "0.28.0"
itertools = "0.15.0"
chrono = "0.4.44"
fnv = "1.0.7"
svg2pdf = "0.13.0"
quick-xml = {version="0.41.0", features=["serialize"]}
rayon = "1.12.0"
intmap = "3.1.3"
csv = "1.4.0"
resvg = "0.47.0"
tiny-skia = "0.12.0" 
bitvec = "1.0.1"
pastey = "0.2.3"

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
ebi_objects = { path = ".", default-features = false, features = ["testactivities"] }